messagepack-derive/tests/fail/default_missing.stderr
error[E0277]: the trait bound `NoDefault: Default` is not satisfied
  --> tests/fail/default_missing.rs:20:21
   |
20 |     assert_derive::<S1<NoDefault>>();
   |                     ^^^^^^^^^^^^^ the trait `Default` is not implemented for `NoDefault`
   |
   = help: the trait `Encode` is implemented for `S1<T>`
note: required for `S1<NoDefault>` to implement `Encode`
  --> tests/fail/default_missing.rs:5:10
   |
 5 | #[derive(Encode, Decode)]
   |          ^^^^^^ unsatisfied trait bound introduced in this `derive` macro
 6 | struct S1<T> {
   |        ^^^^^
note: required by a bound in `assert_derive`
  --> tests/fail/default_missing.rs:11:26
   |
11 | fn assert_derive<'de, T: Encode + Decode<'de>>() {}
   |                          ^^^^^^ required by this bound in `assert_derive`
   = note: this error originates in the derive macro `Encode` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `NoDefault` with `#[derive(Default)]`
   |
17 + #[derive(Default)]
18 | struct NoDefault;
   |

error[E0277]: the trait bound `NoDefault: Default` is not satisfied
  --> tests/fail/default_missing.rs:21:21
   |
21 |     assert_derive::<S2<NoDefault>>();
   |                     ^^^^^^^^^^^^^ the trait `Default` is not implemented for `NoDefault`
   |
   = help: the trait `Encode` is implemented for `S2<T>`
note: required for `S2<NoDefault>` to implement `Encode`
  --> tests/fail/default_missing.rs:13:10
   |
13 | #[derive(Encode, Decode)]
   |          ^^^^^^ unsatisfied trait bound introduced in this `derive` macro
14 | struct S2<T>(#[msgpack(default)] T);
   |        ^^^^^
note: required by a bound in `assert_derive`
  --> tests/fail/default_missing.rs:11:26
   |
11 | fn assert_derive<'de, T: Encode + Decode<'de>>() {}
   |                          ^^^^^^ required by this bound in `assert_derive`
   = note: this error originates in the derive macro `Encode` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `NoDefault` with `#[derive(Default)]`
   |
17 + #[derive(Default)]
18 | struct NoDefault;
   |
